# stm32

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
cmake/: arm-gcc-toolchain.cmake  toolchain-gcc-arm-none-eabi.cmake
linker/: STM32F411RETx_FLASH.ld  STM32F446RETx_FLASH.ld
modules/: main.c  retarget.c  system_init.c  system_stub.c
modules/ens160/: CMakeLists.txt
modules/ens160/include/: ens160.h
modules/ens160/src/: ens160.c
modules/i2c_lowlevel/: CMakeLists.txt
modules/i2c_lowlevel/include/: i2c_lowlevel.h
modules/i2c_lowlevel/src/: i2c_lowlevel.c
modules/uart2/: CMakeLists.txt
modules/uart2/include/: uart2.h
modules/uart2/src/: uart2.c
src/: main.c  system_stub.c
startup/: startup_stm32f446xx.s
test/: CMakeLists.txt  test_ens160_parse.c
